--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
-<!doctype html><!--linguagem html 5-->
-<html lang="pt-br"><!--Formato Português - Brasil-->
-    <head><!--Cabeçalho-->
-        <meta charset="utf-8"/><!--Aceitar caracter especial-->
-<title>Minha Primeira Página</title>
-    <head>
-    <body bgcolor="orange">
-    <h1>Menu</h1>
-    <hr>
-    <h2>Alex</h2>
-    <h3>Valerio</h3>
-    <h4>Curso ADS e CCP</h4>
-    <h5>Programação Web</h5>
-    <h6>Quinta-feira</h6>
-    
-    </head>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Solo Roupas</title>
+</head>
+<body>
+    <body bgcolor="orange"></body>
+   <h1>Lista De Gêneros De Roupas</h1>
+   <hr>
+   <ul>
+    <li>Shounen</li>
+    <li>Comic</li>
+    <li>School</li>
+    <li>Isekai</li>
+    <li>Slife Of Life</li>
+   </ul>
+   <p>A Empresa Solo roupas vem crescendo com sua contribuição com nossas linhas de animes toda semana
+    estamos com poucos catalogos mas,futuramente faremos que aumente muito mais a cada mês,contamos
+    com seu feedback no nosso site SoloRoupas@gmail.com.
+   </p>
+   <p>Navengando em nosso site de Roupas teremos os gêneros a seguir no canto superior esquerdo!.
+    Por exemplo Jujutsu Kaisen sendo da categoria shounen(luta)!!!.
+   </p>
+</body>
 </html>
