--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
    <h1>Lista De Gêneros De Roupas</h1>
    <hr>
    <ul>
-    <li>Shounen</li>
-    <li>Comic</li>
-    <li>School</li>
-    <li>Isekai</li>
-    <li>Slife Of Life</li>
+    <li><a href="Shounen.html"> Shounen</a></li>
+    <li><a href="Comedy.html"> Comic</a></li>
+    <li><a href="Isekai.html"> Isekai</a></li>
    </ul>
    <p>A Empresa Solo roupas vem crescendo com sua contribuição com nossas linhas de animes toda semana
     estamos com poucos catalogos mas,futuramente faremos que aumente muito mais a cada mês,contamos
