--- a/Comedy.html
+++ b/Comedy.html
@@ -31,5 +31,6 @@
         <a href="index.html">Clique Aqui Para Volta Ao Menu</a>
 
 </table>
+    <a href="index.html">Clique Aqui Para Volta Ao Menu</a>
 </body> 
     </html>
